fixed text truncation issue for good

--- a/src/app/core/dashboard/deadline/deadline.component.scss
+++ b/src/app/core/dashboard/deadline/deadline.component.scss
@@ -59,6 +59,12 @@
 		.deadline-name {
 			font-size: 2rem;
 			font-weight: 500;
+			margin-bottom: -0.1rem;
+		}
+
+		.subtitle {
+			display: inline-block;
+			margin-top: -0.1rem;
 		}
 	}
 
