--- a/src/app/core/dashboard/work-unit-upcoming/work-unit-upcoming.component.scss
+++ b/src/app/core/dashboard/work-unit-upcoming/work-unit-upcoming.component.scss
@@ -67,6 +67,11 @@
             .task-title {
                 font-size: 2rem;
                 font-weight: 500;
+                margin-bottom: -0.1rem;
+            }
+
+            .subtitle {
+                margin-top: -0.1rem;
             }
         }
 
