--- a/src/styles.scss
+++ b/src/styles.scss
@@ -356,7 +356,7 @@ progress {
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
-	display: inline-flex;
+	display: inline-block;
     max-width: 100%;
 }
 
